--- a/ARTICLE2/sample.bib
+++ b/ARTICLE2/sample.bib
@@ -1,12 +1,12 @@
 
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%  INTRODUZIONE  %%%%%%%%%%%%%%%%%%%%%5
+
 @misc{EU_context,
-  key = {C2024-5041},
+  author = {European Commission, Brussels},
   journal = {},
   number = {},
-  title = {Communication from the Commission: Guidance on Article 20a on sector integration of renewable electricity of Directive (EU)
-2018/2001 on the promotion of energy from renewable sources, as amended by Directive
-(EU) 2023/2413},
+  title = {Guidance on Article 20a on sector integration of renewable electricity of Directive (EU) 2018/2001 on the promotion of energy from renewable sources, as amended by Directive (EU) 2023/2413 [C(2024) 5041 final]},
   url = {https://energy.ec.europa.eu/document/download/efcd200c-b9ae-4a9c-98ab-73b2fd281fcc_en?filename=C_2024_5041_1_EN_ACT_part1_v10.pdf},
   year = {2024}
 }
@@ -40,17 +40,30 @@ abstract = {Hydrogen technologies can play an important role in decarbonising ou
 }
 
 @article{review_math_opt,
-  author={Michal Jasinski and Arsalan Najafi and et al},
-  title = {Operation and Planning of Energy Hubs Under Uncertainty - A Review of Mathematical Optimization Approaches},
-  year = {2022},
-  journal = {\textcolor{red}{some journal}}
+  author = {Jasiński, Michał and Najafi, Arsalan and Homaee, Omid and Kermani, Mostafa and Tsaousoglou, Georgios and Leonowicz, Zbigniew and Novak, Tomas},
+  year = {2023},
+  month = {01},
+  pages = {1-1},
+  title = {Operation and Planning of Energy Hubs Under Uncertainty—A Review of Mathematical Optimization Approaches},
+  volume = {PP},
+  journal = {IEEE Access},
+  doi = {10.1109/ACCESS.2023.3237649}
 }
 
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
-
+@article{INTRO_isolated_MIP,
+title = {Optimal scheduling of a renewable micro-grid in an isolated load area using mixed-integer linear programming},
+journal = {Renewable Energy},
+volume = {35},
+number = {1},
+pages = {151-156},
+year = {2010},
+issn = {0960-1481},
+doi = {https://doi.org/10.1016/j.renene.2009.02.031},
+url = {https://www.sciencedirect.com/science/article/pii/S0960148109001001},
+author = {Hugo Morais and Péter Kádár and Pedro Faria and Zita A. Vale and H.M. Khodr},
+keywords = {Mixed-integer linear programming, Renewable energy park, Scheduling, Virtual power producer},
+abstract = {In the energy management of the isolated operation of small power system, the economic scheduling of the generation units is a crucial problem. Applying right timing can maximize the performance of the supply. The optimal operation of a wind turbine, a solar unit, a fuel cell and a storage battery is searched by a mixed-integer linear programming implemented in General Algebraic Modeling Systems (GAMS). A Virtual Power Producer (VPP) can optimal operate the generation units, assured the good functioning of equipment, including the maintenance, operation cost and the generation measurement and control. A central control at system allows a VPP to manage the optimal generation and their load control. The application of methodology to a real case study in Budapest Tech, demonstrates the effectiveness of this method to solve the optimal isolated dispatch of the DC micro-grid renewable energy park. The problem has been converged in 0.09s and 30 iterations.}
+}
 
 @INPROCEEDINGS{Horsch,
   author={Hörsch, Jonas and Brown, Tom},
@@ -61,7 +74,8 @@ abstract = {Hydrogen technologies can play an important role in decarbonising ou
   number={},
   pages={1-7},
   keywords={Optimization;Generators;Europe;Investment;Wind;Spatial resolution},
-  doi={10.1109/EEM.2017.7982024}}
+  doi={10.1109/EEM.2017.7982024}
+}
 
 @article{BIENER2020106349,
 title = {Grid reduction for energy system analysis},
@@ -77,13 +91,102 @@ keywords = {Grid reduction, Equivalencing, Energy system analysis, Energy system
 abstract = {Energy system models play an important role in evaluating potential pathways to a low-carbon energy system. Modeling the electrical grids within an energy system model raises the computational burden significantly. This is the reason why the grid is often reduced to a lower amount of nodes. While grid reduction is common in energy system models, the partitioning of the grid is mostly done manually. A grid reduction method is proposed that takes electrical parameters of the grid as well as other parameters, such as political borders or region-specific renewable potentials, into account. The proposed reduction method uses clustering based on electrical distance to identify regions with high electrical connectivity to minimize load flow deviations after the reduction. The method is compared against another state-of-the-art partitioning-based reduction method. The comparison shows that the partitioning plays an important role on the accuracy of line power flows when reducing grids for energy system analysis. An additional investigation is carried out on the ratio of recognized overloaded lines in the reduced grids. With respect to studied parameters, the proposed reduction method prevails. The findings can thus be used to more accurately reduce and represent electrical grids in energy system models.}
 }
 
-@article{Dagdougui,
-  author = {H.Dagdougui,R.Minciardi,A.Ouammi,M.Robba,andR.Sacile},
-  journal = {IEEE Syst. J.},
-  number = {3},
-  title = {A dynamic decision model for the real-time control of hybrid renewable energy production systems},
-  volume = {4},
-  year = {2012}
+@article{INTRO_Glomb,
+title = {A rolling-horizon approach for multi-period optimization},
+journal = {European Journal of Operational Research},
+volume = {300},
+number = {1},
+pages = {189-206},
+year = {2022},
+issn = {0377-2217},
+doi = {https://doi.org/10.1016/j.ejor.2021.07.043},
+url = {https://www.sciencedirect.com/science/article/pii/S0377221721006536},
+author = {Lukas Glomb and Frauke Liers and Florian Rösel},
+keywords = {Large scale optimization, Time decomposition, Rolling horizon, Lot sizing, Tail assignment},
+abstract = {Mathematical optimization problems including a time dimension abound. For example, logistics, process optimization and production planning tasks must often be optimized for a range of time periods. Usually, these problems incorporating time structure are very large and cannot be solved to global optimality by modern solvers within a reasonable period of time. Therefore, the so-called rolling-horizon approach is often adopted. This approach aims to solve the problem periodically, including additional information from proximately following periods. In this paper, we first investigate several drawbacks of this approach and develop an algorithm that compensates for these drawbacks both theoretically and practically. As a result, the rolling-horizon decomposition methodology is adjusted to enable large scale optimization problems to be solved efficiently. In addition, we introduce conditions that guarantee the quality of the solutions. We further demonstrate the applicability of the method to a variety of challenging optimization problems. We substantiate the findings with computational studies on the lot-sizing problem in production planning, as well as for large-scale real-world instances of the tail-assignment problem in aircraft management. It proves possible to solve large-scale realistic tail-assignment instances efficiently, leading to solutions that are at most a few percent away from a globally optimal solution.}
+}
+
+@article{INTRO_Palma-Behnke,
+  author={Palma-Behnke, Rodrigo and Benavides, Carlos and Lanas, Fernando and Severino, Bernardo and Reyes, Lorenzo and Llanos, Jacqueline and Sáez, Doris},
+  journal={IEEE Transactions on Smart Grid}, 
+  title={A Microgrid Energy Management System Based on the Rolling Horizon Strategy}, 
+  year={2013},
+  volume={4},
+  number={2},
+  pages={996-1006},
+  keywords={Microgrids;Energy management;Generators;Batteries;Predictive models;Load modeling;Inverters;Demand-side management;energy management system;microgrid;photovoltaic;rolling horizon;wind turbine},
+  doi={10.1109/TSG.2012.2231440}}
+
+@article{INTRO_karlsruhe,
+  author={Hasan U. Yilmaz and Kai Mainzer and Dogan Keles},
+  journal={2020 17th International Conference on the European Energy Market (EEM)}, 
+  title={Improving the performance of solving large scale mixed-integer energy system models by applying the fix-and-relax method}, 
+  year={2020},
+  pages={1-5},
+  keywords={Costs;Europe;Optimization;System analysis and design;Periodic structures},
+  doi={10.1109/EEM49802.2020.9221934},
+}
+
+@inproceedings{papero_bin,
+author = {Kirschbaum, Stefan and Powilleit, Marion and Schotte, Merlind and Özbeg, Furkan},
+year = {2023},
+month = {01},
+pages = {2774-2785},
+title = {Efficient Solving of Time-Coupled Energy System MILP Models Using a Problem Specific LP Relaxation},
+doi = {10.52202/069564-0249}
+}
+
+@article{INTRO_short-term,
+title = {Short term decisions for long term problems - The effect of foresight on model based energy systems analysis},
+journal = {Energy},
+volume = {35},
+number = {5},
+pages = {2033-2042},
+year = {2010},
+issn = {0360-5442},
+doi = {https://doi.org/10.1016/j.energy.2010.01.019},
+url = {https://www.sciencedirect.com/science/article/pii/S0360544210000216},
+author = {Ilkka Keppo and Manfred Strubegger},
+keywords = {Energy modeling, Optimization model, Decision horizon, Myopic, Foresight},
+abstract = {This paper presents the development and demonstration of a limited foresight energy system model. The presented model is implemented as an extension to a large, linear optimization model, MESSAGE. The motivation behind changing the model is to provide an alternative decision framework, where information for the full time frame is not available immediately and sequential decision making under incomplete information is implied. While the traditional optimization framework provides the globally optimal decisions for the modeled problem, the framework presented here may offer a better description of the decision environment, under which decision makers must operate. We further modify the model to accommodate flexible dynamic constraints, which give an option to implement investments faster, albeit with a higher cost. Finally, the operation of the model is demonstrated using a moving window of foresight, with which decisions are taken for the next 30 years, but can be reconsidered later, when more information becomes available. We find that the results demonstrate some of the pitfalls of short term planning, e.g. lagging investments during earlier periods lead to higher requirements later during the century. Furthermore, the energy system remains more reliant on fossil based energy carriers, leading to higher greenhouse gas emissions.}
+}
+
+@article{TD_clustering,
+title = {Selection of typical demand days for CHP optimization},
+journal = {Energy and Buildings},
+volume = {43},
+number = {11},
+pages = {3036-3043},
+year = {2011},
+issn = {0378-7788},
+doi = {https://doi.org/10.1016/j.enbuild.2011.07.024},
+url = {https://www.sciencedirect.com/science/article/pii/S037877881100329X},
+author = {Fernando Domínguez-Muñoz and José M. Cejudo-López and Antonio Carrillo-Andrés and Manuel Gallardo-Salazar},
+keywords = {Typical demand days, CHP optimization, Cluster analysis, -Medoids method},
+}
+
+@article{RH_vs_TD,
+title = {Comparing different temporal dimension representations in distributed energy system design models},
+journal = {Energy Procedia},
+volume = {122},
+pages = {907-912},
+year = {2017},
+issn = {1876-6102},
+doi = {https://doi.org/10.1016/j.egypro.2017.07.403},
+url = {https://www.sciencedirect.com/science/article/pii/S1876610217330102},
+author = {Julien F. Marquant and Georgios Mavromatidis and Ralph Evins and Jan Carmeliet},
+keywords = {Energy hub, Distributed energy systems, Temporal resolution, Rolling horizon, Typical days, Optimisation}
+}
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%  MODEL  %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+@misc{INTRO_gurobi,
+  author = {{Gurobi Optimization, LLC}},
+  title = {{Gurobi Optimizer Reference Manual}},
+  year = 2024,
+  url = "https://www.gurobi.com"
 }
 
 @mastersthesis{tesi_NTC,
@@ -92,6 +195,114 @@ abstract = {Energy system models play an important role in evaluating potential 
   title = {Modelling the European cross-border electricity transmission},
   year = {2020},
   url = {https://www.diva-portal.org/smash/get/diva2:1476768/FULLTEXT01.pdf}
+}
+
+
+@misc{entsoe_NTC,
+  title = {ENTSO-E Power Statistics and Transparency Platform - Cross-Border Physical Flow},
+  year = {2024},
+  key = {Entso-e Power Statistics and Transparency Platform},
+  url = {https://transparency.entsoe.eu/transmission-domain/physicalFlow/show?name=&defaultValue=false&viewType=TABLE&areaType=BORDER_CTY&atch=false&dateTime.dateTime=22.07.2024+00:00|CET|DAY&border.values=CTY|10YGR-HTSO-----Y!CTY_CTY|10YGR-HTSO-----Y_CTY_CTY|10YIT-GRTN-----B&dateTime.timezone=CET_CEST&dateTime.timezone_input=CET+(UTC+1)+/+CEST+(UTC+2)},
+  note = {Statistical Reports. Data is published based on aggregations of Transparency Platform data, complying with the Transparency regulation as described in the Detailed Data Description document.}
+}
+
+
+@misc{LCOH,
+  key = {European Hydrogen Observatory},
+  howpublished = {},
+  title = {},
+  year = {2023},
+  url ={https://observatory.clean-hydrogen.europa.eu/tools-reports/levelised-cost-hydrogen-calculator}
+}
+
+
+@ARTICLE{deterministic,
+  author={Wang, Caisheng and Nehrir, M. Hashem},
+  journal={IEEE Transactions on Energy Conversion}, 
+  title={Power Management of a Stand-Alone Wind/Photovoltaic/Fuel Cell Energy System}, 
+  year={2008},
+  volume={23},
+  number={3},
+  pages={957-967},
+  keywords={Energy management;Power system management;Photovoltaic systems;Solar power generation;Fuel cells;Wind;Load flow;Energy storage;Mathematical model;Power system modeling;Alternative energy;electrolyzer;fuel cell (FC);hybrid;photovoltaic (PV);power management;stand-alone;wind},
+  doi={10.1109/TEC.2007.914200}}
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% APPENDICE A %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
+@article{betaPV,
+title = {Prediction interval of wind power using parameter optimized Beta distribution based LSTM model},
+journal = {Applied Soft Computing},
+volume = {82},
+pages = {105550},
+year = {2019},
+issn = {1568-4946},
+doi = {https://doi.org/10.1016/j.asoc.2019.105550},
+url = {https://www.sciencedirect.com/science/article/pii/S1568494619303308},
+author = {Xiaohui Yuan and Chen Chen and Min Jiang and Yanbin Yuan},
+keywords = {Wind power, Prediction interval, Long short-term memory neural network, Beta distribution, Particle swarm optimization},
+abstract = {Prediction interval of wind power (PIWP) is crucial to assessing the economic and safe operation of the wind turbine and providing support for analysis of the stability of power systems. The hybrid model (Beta-PSO-LSTM) of long short-term memory (LSTM) neural network and Beta distribution function based particle swarm optimization (PSO) is put forward for prediction interval of wind power. In order to enhance the performance of the Beta-PSO-LSTM for PIWP in training process, wind power series are divided into different power intervals, and then the Beta-PSO-LSTM is used to estimate each power interval of the original wind power series. Furthermore, based on the analysis of the interval forecasting error information in wind power training data set, Beta distribution model is proposed to get better PIWP, and PSO is used to optimize the parameters of the model. Finally, the proposed Beta-PSO-LSTM model is compared with the Beta distribution optimized by PSO based the BP neural network (Beta-PSO-BP), the normal distribution based LSTM neural network (Norm-LSTM), Beta distribution based LSTM neural network (Beta-LSTM), and Beta distribution optimized by iterative method based LSTM neural network (Beta-IM-LSTM) for PIWP. The simulation results show that the PIWP obtained by the Beta-PSO-LSTM model has higher reliability and narrower interval bandwidth, which can provide decision support for the safe and stable operation of power systems.}
+}
+
+@article{weibullwind,
+title = {Evaluation of wind power production prospective and Weibull parameter estimation methods for Babaurband, Sindh Pakistan},
+journal = {Energy Conversion and Management},
+volume = {78},
+pages = {956-967},
+year = {2014},
+issn = {0196-8904},
+doi = {https://doi.org/10.1016/j.enconman.2013.06.062},
+url = {https://www.sciencedirect.com/science/article/pii/S019689041300589X},
+author = {Shahnawaz Farhan Khahro and Kavita Tabbassum and Amir Mahmood Soomro and Lei Dong and Xiaozhong Liao},
+keywords = {Wind energy, Power density function, Weibull distribution, Frequency distribution, Wind rose},
+abstract = {Pakistan is currently experiencing an acute shortage of energy and urgently needs new sources of affordable energy that could alleviate the misery of the energy starved masses. At present the government is increasing not only the conventional energy sources like hydel and thermal but also focusing on the immense potential of renewable energy sources like; solar, wind, biogas, waste-to-energy etc. The recent economic crisis worldwide, global warming and climate change have also emphasized the need for utilizing economic feasible energy sources having lowest carbon emissions. Wind energy, with its sustainability and low environmental impact, is highly prominent. The aim of this paper is to explore the wind power production prospective of one of the sites in south region of Pakistan. It is worth mentioning here that this type of detailed analysis is hardly done for any location in Pakistan. Wind power densities and frequency distributions of wind speed at four different altitudes along with estimated wind power expected to be generated through commercial wind turbines is calculated. Analysis and comparison of 5 numerical methods is presented in this paper to determine the Weibull scale and shape parameters for the available wind data. The yearly mean wind speed of the considered site is 6.712m/s and has power density of 310W/m2 at 80m height with high power density during April to August (highest in May with wind speed 9.595m/s and power density 732W/m2). Economic evaluation, to exemplify feasibility of installing wind turbines, is also done. The estimated cost of per kWh of electricity from wind is calculated as 0.0263US$/kWh. Thus the candidate site is recommended for some small stand-alone systems as well as for wind farm.}
+}
+
+@article{30y_gen,
+author = {Stefan Pfenninger and Iain Staffell}, 
+title = {Long-term patterns of European PV output using 30 years of validated hourly reanalysis and satellite data},
+journal = {Energy},
+volume = {114},
+issn = {0360-5442},
+year = {2016},
+pages = {1251-1265},
+doi = {https://doi.org/10.1016/j.energy.2016.08060}
+}
+
+@misc{ENTSOE_PowerStats,
+  title = {ENTSO-E Power Statistics and Transparency Platform},
+  year = {2024},
+  key = {ENTSO-E Statistical Reports},
+  url = {https://www.entsoe.eu/data/power-stats/},
+  note = {Statistical Reports. Data is published based on aggregations of Transparency Platform data, complying with the Transparency regulation as described in the Detailed Data Description document.}
+}
+
+@ARTICLE{GaussCopula,
+  author={Papaefthymiou, George and Kurowicka, Dorota},
+  journal={IEEE Transactions on Power Systems}, 
+  title={Using Copulas for Modeling Stochastic Dependence in Power System Uncertainty Analysis}, 
+  year={2009},
+  volume={24},
+  number={1},
+  pages={40-49},
+  keywords={Power system modeling;Stochastic systems;Power system analysis computing;Uncertainty;Random variables;Power system planning;Stochastic processes;Power generation;Context modeling;Aggregates;Copula;correlation;Monte Carlo simulation;stochastic dependence;stochastic generation;uncertainty analysis;wind power},
+  doi={10.1109/TPWRS.2008.2004728}}
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%  FINE  %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
+
+
+
+@article{Dagdougui,
+  author = {H.Dagdougui,R.Minciardi,A.Ouammi,M.Robba,andR.Sacile},
+  journal = {IEEE Syst. J.},
+  number = {3},
+  title = {A dynamic decision model for the real-time control of hybrid renewable energy production systems},
+  volume = {4},
+  year = {2012}
 }
 
 
@@ -104,10 +315,12 @@ pages = {},
 year = {2023},
 doi = {},
 url = {https://observatory.clean-hydrogen.europa.eu/sites/default/files/2023-11/Report%2001%20-%20November%202023%20-%20The%20European%20hydrogen%20market%20landscape.pdf},
-author = {European Hydrogen Observatory},
+key = {European Hydrogen Observatory},
 keywords = {},
 abstract = {}
 }
+
+
 
 @misc{MOPTA,
   author       = {Riccardi, Morgari},
@@ -128,76 +341,6 @@ abstract = {}
 }
 
 
-
-@article{INTRO_isolated_MIP,
-title = {Optimal scheduling of a renewable micro-grid in an isolated load area using mixed-integer linear programming},
-journal = {Renewable Energy},
-volume = {35},
-number = {1},
-pages = {151-156},
-year = {2010},
-issn = {0960-1481},
-doi = {https://doi.org/10.1016/j.renene.2009.02.031},
-url = {https://www.sciencedirect.com/science/article/pii/S0960148109001001},
-author = {Hugo Morais and Péter Kádár and Pedro Faria and Zita A. Vale and H.M. Khodr},
-keywords = {Mixed-integer linear programming, Renewable energy park, Scheduling, Virtual power producer},
-abstract = {In the energy management of the isolated operation of small power system, the economic scheduling of the generation units is a crucial problem. Applying right timing can maximize the performance of the supply. The optimal operation of a wind turbine, a solar unit, a fuel cell and a storage battery is searched by a mixed-integer linear programming implemented in General Algebraic Modeling Systems (GAMS). A Virtual Power Producer (VPP) can optimal operate the generation units, assured the good functioning of equipment, including the maintenance, operation cost and the generation measurement and control. A central control at system allows a VPP to manage the optimal generation and their load control. The application of methodology to a real case study in Budapest Tech, demonstrates the effectiveness of this method to solve the optimal isolated dispatch of the DC micro-grid renewable energy park. The problem has been converged in 0.09s and 30 iterations.}
-}
-
-@article{INTRO_Glomb,
-title = {A rolling-horizon approach for multi-period optimization},
-journal = {European Journal of Operational Research},
-volume = {300},
-number = {1},
-pages = {189-206},
-year = {2022},
-issn = {0377-2217},
-doi = {https://doi.org/10.1016/j.ejor.2021.07.043},
-url = {https://www.sciencedirect.com/science/article/pii/S0377221721006536},
-author = {Lukas Glomb and Frauke Liers and Florian Rösel},
-keywords = {Large scale optimization, Time decomposition, Rolling horizon, Lot sizing, Tail assignment},
-abstract = {Mathematical optimization problems including a time dimension abound. For example, logistics, process optimization and production planning tasks must often be optimized for a range of time periods. Usually, these problems incorporating time structure are very large and cannot be solved to global optimality by modern solvers within a reasonable period of time. Therefore, the so-called rolling-horizon approach is often adopted. This approach aims to solve the problem periodically, including additional information from proximately following periods. In this paper, we first investigate several drawbacks of this approach and develop an algorithm that compensates for these drawbacks both theoretically and practically. As a result, the rolling-horizon decomposition methodology is adjusted to enable large scale optimization problems to be solved efficiently. In addition, we introduce conditions that guarantee the quality of the solutions. We further demonstrate the applicability of the method to a variety of challenging optimization problems. We substantiate the findings with computational studies on the lot-sizing problem in production planning, as well as for large-scale real-world instances of the tail-assignment problem in aircraft management. It proves possible to solve large-scale realistic tail-assignment instances efficiently, leading to solutions that are at most a few percent away from a globally optimal solution.}
-}
-
-
-@article{INTRO_Palma-Behnke,
-  author={Palma-Behnke, Rodrigo and Benavides, Carlos and Lanas, Fernando and Severino, Bernardo and Reyes, Lorenzo and Llanos, Jacqueline and Sáez, Doris},
-  journal={IEEE Transactions on Smart Grid}, 
-  title={A Microgrid Energy Management System Based on the Rolling Horizon Strategy}, 
-  year={2013},
-  volume={4},
-  number={2},
-  pages={996-1006},
-  keywords={Microgrids;Energy management;Generators;Batteries;Predictive models;Load modeling;Inverters;Demand-side management;energy management system;microgrid;photovoltaic;rolling horizon;wind turbine},
-  doi={10.1109/TSG.2012.2231440}}
-
-
-@article{INTRO_karlsruhe,
-  author={Hasan U. Yilmaz, Kai Mainzer, Dogan Keles},
-  booktitle={2020 17th International Conference on the European Energy Market (EEM)}, 
-  title={Improving the performance of solving large scale mixed-integer energy system models by applying the fix-and-relax method}, 
-  year={2020},
-  pages={1-5},
-  keywords={Costs;Europe;Optimization;System analysis and design;Periodic structures},
-  doi={10.1109/EEM49802.2020.9221934},
-  journal = {\textcolor{red}{some journal}}
-}
-
-
-@article{INTRO_short-term,
-title = {Short term decisions for long term problems – The effect of foresight on model based energy systems analysis},
-journal = {Energy},
-volume = {35},
-number = {5},
-pages = {2033-2042},
-year = {2010},
-issn = {0360-5442},
-doi = {https://doi.org/10.1016/j.energy.2010.01.019},
-url = {https://www.sciencedirect.com/science/article/pii/S0360544210000216},
-author = {Ilkka Keppo, Manfred Strubegger},
-keywords = {Energy modeling, Optimization model, Decision horizon, Myopic, Foresight},
-abstract = {This paper presents the development and demonstration of a limited foresight energy system model. The presented model is implemented as an extension to a large, linear optimization model, MESSAGE. The motivation behind changing the model is to provide an alternative decision framework, where information for the full time frame is not available immediately and sequential decision making under incomplete information is implied. While the traditional optimization framework provides the globally optimal decisions for the modeled problem, the framework presented here may offer a better description of the decision environment, under which decision makers must operate. We further modify the model to accommodate flexible dynamic constraints, which give an option to implement investments faster, albeit with a higher cost. Finally, the operation of the model is demonstrated using a moving window of foresight, with which decisions are taken for the next 30 years, but can be reconsidered later, when more information becomes available. We find that the results demonstrate some of the pitfalls of short term planning, e.g. lagging investments during earlier periods lead to higher requirements later during the century. Furthermore, the energy system remains more reliant on fossil based energy carriers, leading to higher greenhouse gas emissions.}
-}
 
 @article{HORSCH2018207,
 title = {PyPSA-Eur: An open optimisation model of the European transmission system},
@@ -235,21 +378,7 @@ keywords = {Hydrogen square, Hydrogen production, Hydrogen economy, Hydrogen cle
   note         = {The State of the European Hydrogen Market Report provides an independent view of the latest developments in the EU and UK, covering both qualitative information and quantitative Key Performance Indicators.}
 }
 
-@misc{entsoe_NTC,
-  title = {ENTSO-E Power Statistics and Transparency Platform},
-  year = {2024},
-  key = {ENTSO-E},
-  url = {https://transparency.entsoe.eu/transmission-domain/physicalFlow/show?name=&defaultValue=false&viewType=TABLE&areaType=BORDER_CTY&atch=false&dateTime.dateTime=22.07.2024+00:00|CET|DAY&border.values=CTY|10YGR-HTSO-----Y!CTY_CTY|10YGR-HTSO-----Y_CTY_CTY|10YIT-GRTN-----B&dateTime.timezone=CET_CEST&dateTime.timezone_input=CET+(UTC+1)+/+CEST+(UTC+2)},
-  note = {Statistical Reports. Data is published based on aggregations of Transparency Platform data, complying with the Transparency regulation as described in the Detailed Data Description document.}
-}
 
-@misc{ENTSOE_PowerStats,
-  title = {ENTSO-E Power Statistics and Transparency Platform - Cross-Border Physical Flow},
-  year = {2024},
-  key = {ENTSO-E},
-  url = {https://www.entsoe.eu/data/power-stats/},
-  note = {Statistical Reports. Data is published based on aggregations of Transparency Platform data, complying with the Transparency regulation as described in the Detailed Data Description document.}
-}
 
 @article{WindDataSet,
 title = {Using bias-corrected reanalysis to simulate current and future wind power output},
@@ -292,61 +421,6 @@ ISSN = {1996-1073},
 DOI = {10.3390/en14206508}
 }
 
-
-
-@article{betaPV,
-title = {Prediction interval of wind power using parameter optimized Beta distribution based LSTM model},
-journal = {Applied Soft Computing},
-volume = {82},
-pages = {105550},
-year = {2019},
-issn = {1568-4946},
-doi = {https://doi.org/10.1016/j.asoc.2019.105550},
-url = {https://www.sciencedirect.com/science/article/pii/S1568494619303308},
-author = {Xiaohui Yuan and Chen Chen and Min Jiang and Yanbin Yuan},
-keywords = {Wind power, Prediction interval, Long short-term memory neural network, Beta distribution, Particle swarm optimization},
-abstract = {Prediction interval of wind power (PIWP) is crucial to assessing the economic and safe operation of the wind turbine and providing support for analysis of the stability of power systems. The hybrid model (Beta-PSO-LSTM) of long short-term memory (LSTM) neural network and Beta distribution function based particle swarm optimization (PSO) is put forward for prediction interval of wind power. In order to enhance the performance of the Beta-PSO-LSTM for PIWP in training process, wind power series are divided into different power intervals, and then the Beta-PSO-LSTM is used to estimate each power interval of the original wind power series. Furthermore, based on the analysis of the interval forecasting error information in wind power training data set, Beta distribution model is proposed to get better PIWP, and PSO is used to optimize the parameters of the model. Finally, the proposed Beta-PSO-LSTM model is compared with the Beta distribution optimized by PSO based the BP neural network (Beta-PSO-BP), the normal distribution based LSTM neural network (Norm-LSTM), Beta distribution based LSTM neural network (Beta-LSTM), and Beta distribution optimized by iterative method based LSTM neural network (Beta-IM-LSTM) for PIWP. The simulation results show that the PIWP obtained by the Beta-PSO-LSTM model has higher reliability and narrower interval bandwidth, which can provide decision support for the safe and stable operation of power systems.}
-}
-
-@ARTICLE{INTRO_GaussCopula,
-
-  author={Papaefthymiou, George and Kurowicka, Dorota},
-
-  journal={IEEE Transactions on Power Systems}, 
-
-  title={Using Copulas for Modeling Stochastic Dependence in Power System Uncertainty Analysis}, 
-
-  year={2009},
-
-  volume={24},
-
-  number={1},
-
-  pages={40-49},
-
-  keywords={Power system modeling;Stochastic systems;Power system analysis computing;Uncertainty;Random variables;Power system planning;Stochastic processes;Power generation;Context modeling;Aggregates;Copula;correlation;Monte Carlo simulation;stochastic dependence;stochastic generation;uncertainty analysis;wind power},
-
-  doi={10.1109/TPWRS.2008.2004728}}
-
-@misc{INTRO_gurobi,
-  author = {{Gurobi Optimization, LLC}},
-  title = {{Gurobi Optimizer Reference Manual}},
-  year = 2024,
-  url = "https://www.gurobi.com"
-}
-@article{weibullwind,
-title = {Evaluation of wind power production prospective and Weibull parameter estimation methods for Babaurband, Sindh Pakistan},
-journal = {Energy Conversion and Management},
-volume = {78},
-pages = {956-967},
-year = {2014},
-issn = {0196-8904},
-doi = {https://doi.org/10.1016/j.enconman.2013.06.062},
-url = {https://www.sciencedirect.com/science/article/pii/S019689041300589X},
-author = {Shahnawaz Farhan Khahro and Kavita Tabbassum and Amir Mahmood Soomro and Lei Dong and Xiaozhong Liao},
-keywords = {Wind energy, Power density function, Weibull distribution, Frequency distribution, Wind rose},
-abstract = {Pakistan is currently experiencing an acute shortage of energy and urgently needs new sources of affordable energy that could alleviate the misery of the energy starved masses. At present the government is increasing not only the conventional energy sources like hydel and thermal but also focusing on the immense potential of renewable energy sources like; solar, wind, biogas, waste-to-energy etc. The recent economic crisis worldwide, global warming and climate change have also emphasized the need for utilizing economic feasible energy sources having lowest carbon emissions. Wind energy, with its sustainability and low environmental impact, is highly prominent. The aim of this paper is to explore the wind power production prospective of one of the sites in south region of Pakistan. It is worth mentioning here that this type of detailed analysis is hardly done for any location in Pakistan. Wind power densities and frequency distributions of wind speed at four different altitudes along with estimated wind power expected to be generated through commercial wind turbines is calculated. Analysis and comparison of 5 numerical methods is presented in this paper to determine the Weibull scale and shape parameters for the available wind data. The yearly mean wind speed of the considered site is 6.712m/s and has power density of 310W/m2 at 80m height with high power density during April to August (highest in May with wind speed 9.595m/s and power density 732W/m2). Economic evaluation, to exemplify feasibility of installing wind turbines, is also done. The estimated cost of per kWh of electricity from wind is calculated as 0.0263US$/kWh. Thus the candidate site is recommended for some small stand-alone systems as well as for wind farm.}
-}
 
 
 @article{future_climate,
@@ -431,11 +505,7 @@ Operation and Planning of Energy Hubs Under Uncertainty - A Review of Mathematic
 Author, European Hydrogen Market Landscape - November 2023 Report, page numbers. Publisher, place (year)
 
 
-\bibitem{30y_gen}
-Stefan Pfenninger and Iain Staffell. “Long-term patterns of European PV output us-
-ing 30 years of validated hourly reanalysis and satellite data”. In: Energy 114 (2016),
-pp. 1251–1265. issn: 0360-5442. doi: https://doi.org/10.1016/j.energy.2016.08.
-060.
+
 
 \bibitem{Gurobi}
 Gurobi Optimization, LLC: Gurobi Optimizer Reference Manual (2024). https://www.gurobi.com
